--- a/index.html
+++ b/index.html
@@ -172,13 +172,12 @@
         <!-- Call to action-->
         <section class="page-section bg-dark text-white">
             <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">Dispositivo AlphaBraille</h2>
-                <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Link!</a>
+                <h2 class="mb-4">Code AlphaBraille</h2>
+                <a class="btn btn-light btn-xl" href="https://github.com/javera91/AlphaBrailleDFPlayerESP32/blob/main/AlphaBraille_DFPlayer_ESP32.ino">Link!</a>
             </div>
         </section>
         <!-- Contact-->
-         <!-- Contact -->
-         <section class="page-section" id="contact">
+        <section class="page-section" id="contact">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 col-xl-6 text-center">
