--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Introducción</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">Start Bootstrap has everything you need to get your new website up a!</p>
-                        <a class="btn btn-light btn-xl" href="#services">Continuar</a>
+                        <p class="text-white-75 mb-4">La educación inclusiva en Ecuador presenta desafios im</p>
+                        <a class="btn btn-light btn-xl" href="https://www.consejodiscapacidades.gob.ec/estadisticas-de-discapacidad/">Link</a>
+                        
                     </div>
                 </div>
             </div>
